# myCNN

./: .gitignore  CMakeLists.txt  log_accuracy.csv  log_loss.csv  noise_test.sh  plot.py
include/: param.hpp
include/datasets/: batch.hpp  load_data.hpp  single_data.hpp
include/layer/: layers.hpp
include/network/: network.hpp
include/utils/: to_vector.hpp
memo/: 参考文献.txt
src/: main.cpp  param.cpp
src/datasets/: load_data.cpp  single_data.cpp
tests/: load_file_test.cpp
